[workspace]
resolver = "2"
members = [
  "file-store",
  "filter-parser",
  "flatten-serde-json",
  "json-depth-checker", "zig",
]

[workspace.package]
version = "0.1.0"
homepage = "https://github.com/Esuol/rust_utils.git"
authors = ["Esuol <berlinenPlus@gmail.com>"]
description = "A file store utils for the web"
readme = "README.md"
edition = "2021"

[workspace.dependencies]

[profile.release]
codegen-units = 1
