[package]
name = "flatten-serde-json"
version = "0.1.0"
authors.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
