[package]
name = "json-depth-checker"
description = "A library that indicates if a JSON must be flattened"
publish = false
version = "0.1.0"

authors.workspace = true
description.workspace = true
readme.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "depth"
harness = false
